<resources>
    <string name="app_name">FitKit</string>
    <string name="title_stepCounter">Steps Counter</string>
    <string name="title_bmiCalculator">BMI Calculator</string>
    <string name="title_sportsNews">Sports News</string>

    <string name="text_button_calculate">Calculate</string>
    <string name="text_button_exit">Exit</string>
    <string name="default_show_result" />
    <string name="default_show_bmi">Enter weight (kg) and height (m)</string>

    <string name="text_label_kg">kg</string>
    <string name="text_label_m">m</string>

    <string name="content_button_calculate">Calculate your BMI</string>
    <string name="content_button_exit">Exit application</string>
    <string name="content_show_result" />
    <string name="content_show_bmi" />
    <string name="content_user_answer">Key your weight as Kg</string>
    <string name="steps">Steps Taken</string>
    <string name="_0">0</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="distance_travelled">Distance Travelled(m)</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="height_m">Height(m)</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="my_details">My Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="fitkit">FitKit</string>
    <string name="the_fitness_and_sport_app">The Fitness and Sport App</string>
    <string name="profile">Profile</string>
    <string name="already_a_user_signin">Already a user? SignIn</string>
    <string name="save_edit">Save/Edit</string>
    <string name="please_wait_while_we_fetch_your_data">Please wait while we fetch your data</string>
    <string name="stop">STOP</string>
    <string name="start">START</string>

</resources>
