<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:layout_below="@id/llContents"
            android:id="@+id/ivBMI"
            android:visibility="invisible"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bmigraph"/>

    <LinearLayout
            android:id="@+id/llContents"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".fragments.BmiCalculatorFragment">

        <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/showBMI"
                    style="@style/TextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_show_bmi"
                    android:text="@string/default_show_bmi"/>

            <TextView
                    android:id="@+id/showResult"
                    style="@style/TextTheme"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_show_result"
                    android:text="@string/default_show_result"/>
        </LinearLayout>


        <LinearLayout
                android:id="@+id/contain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <EditText
                        android:labelFor="@id/inputKg"
                        android:id="@+id/inputKg"
                        style="@style/TextTheme"
                        android:hint="Weight(kg)"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_user_answer"
                        android:ems="4"
                        android:inputType="numberDecimal"
                />
                <EditText
                        android:labelFor="@id/inputM"
                        android:id="@+id/inputM"
                        style="@style/TextTheme"
                        android:hint="Height(meter)"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/content_user_answer"
                        android:ems="4"
                        android:inputType="numberDecimal"
                />
            </LinearLayout>
        </LinearLayout>

        <Button
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:id="@+id/buttonCalculate"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_button_calculate"
                android:text="@string/text_button_calculate"
                android:textColor="#fff"
                android:background="@drawable/button_rounded"/>

    </LinearLayout>
</RelativeLayout>