<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".ui.activity.SignInActivity">
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">
        <EditText
                android:id="@+id/etEmail"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:ems="10"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:passwordToggleEnabled="true">
        <EditText
                android:id="@+id/etPassword"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="20sp"
                android:ems="10"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="50dp"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/button_rounded"/>
    <Button
            android:id="@+id/btnRegister"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textColor="#fff"
            android:background="@drawable/button_rounded"/>

</LinearLayout>