<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

    <TextView
            android:id="@+id/tvSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textSize="32sp"
            android:textColor="#000"/>

    <LinearLayout
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
                android:id="@+id/tvStepsValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:layout_weight="2"
                android:padding="10dp"
                android:textSize="24sp"/>

        <ImageView android:src="@drawable/ic_steps"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="80dp"/>
    </LinearLayout>

    <TextView
            android:paddingTop="10dp"
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/distance_travelled"
            android:textColor="#000"/>
    <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:padding="10dp"
            android:textSize="24sp"/>

</LinearLayout>
